--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Uncial Antiqua', serif;
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: #121212;
+            color: white;
+            text-align: center;
+        }
+
+        .header {
+            position: relative;
+            width: 100%;
+            height: 100vh; 
+            background: url('background.jpg') no-repeat center center/cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .medieval-text {
+            position: absolute;
+            top: 35%;
+            font-size: 3rem;
+            color: white;
+            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px 20px;
+            border-radius: 10px;
+        }
+
+        .buttons {
+            position: absolute;
+            bottom: 5vh;
+            right: 5vw;
+            display: flex;
+            gap: 15px;
+            flex-wrap: wrap;
+        }
+
+        .buttons a {
+            text-decoration: none;
+            padding: 12px 18px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 1rem;
+            transition: 0.3s ease-in-out;
+        }
+
+        .buttons a:hover {
+            background-color: #8284ff;
+            transform: scale(1.1);
+        }
+
+        .features-section {
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        .features {
+            max-width: 800px;
+            margin: 0 auto;
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        .gallery-container {
+            width: 100%;
+            overflow-x: auto;
+            white-space: nowrap;
+            padding: 20px 0;
+            background: #1a1a1a;
+        }
+
+        .gallery {
+            display: inline-flex;
+            gap: 15px;
+            padding: 10px;
+        }
+
+        .gallery img {
+            width: 300px;
+            height: 200px;
+            border-radius: 10px;
+            object-fit: cover;
+            transition: 0.3s;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.1);
+        }
+
+        @media (max-width: 768px) {
+            .medieval-text {
+                font-size: 2rem;
+            }
+
+            .buttons {
+                bottom: 3vh;
+                right: 3vw;
+                flex-direction: column;
+                align-items: flex-end;
+            }
+
+            .buttons a {
+                padding: 10px 15px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="header">
+        <div class="medieval-text">TAMAS YAMI</div>
+        <div class="buttons">
+            <a href="https://youtube.com" target="_blank">YouTube</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <a href="https://store.steampowered.com" target="_blank">Steam</a>
+            <a href="pre-register.html">Pre-Register</a>
+        </div>
+    </div>
+
+    <div class="features-section">
+        <h2>Features</h2>
+        <p class="features">
+            ⚔️ Immersive medieval experience <br>
+            🎮 Gaming community integration <br>
+            📜 Exclusive early access content <br>
+            🔥 Interactive & engaging platform <br>
+        </p>
+    </div>
+
+    <div class="gallery-container">
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="image1.jpg" alt="Game Screenshot 1">
+            <img src="image2.jpg" alt="Game Screenshot 2">
+            <img src="image3.jpg" alt="Game Screenshot 3">
+            <img src="image4.jpg" alt="Game Screenshot 4">
+        </div>
+    </div>
+
+</body>
+</html>
 
