--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             position: relative;
             width: 100%;
             height: 100vh; 
-            background: url('background.jpg') no-repeat center center/cover;
+            background: url('Assets/background.jpg') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -148,10 +148,11 @@
     <div class="gallery-container">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="image1.jpg" alt="Game Screenshot 1">
-            <img src="image2.jpg" alt="Game Screenshot 2">
-            <img src="image3.jpg" alt="Game Screenshot 3">
-            <img src="image4.jpg" alt="Game Screenshot 4">
+            <img src="Assets/image1.jpg" alt="Game Screenshot 1">
+     
+            <img src="Assets/image2.jpg" alt="Game Screenshot 2">
+            <img src="Assets/image3.jpg" alt="Game Screenshot 3">
+            <img src="Assets/image4.jpg" alt="Game Screenshot 4">
         </div>
     </div>
 
