--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             position: relative;
             width: 100%;
             height: 100vh; 
-            background: url('Assets/background.jpg') no-repeat center center/cover;
+            background: url('Assets/background copy.jpg') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -67,16 +67,28 @@
             transform: scale(1.1);
         }
 
-        .features-section {
+        .features-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
             padding: 50px 20px;
-            text-align: center;
+            text-align: left;
+            max-width: 1000px;
+            margin: auto;
         }
 
         .features {
-            max-width: 800px;
-            margin: 0 auto;
+            max-width: 500px;
             font-size: 1.2rem;
             line-height: 1.6;
+        }
+
+        .character-image {
+            width: 250px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
         }
 
         .gallery-container {
@@ -120,6 +132,15 @@
             .buttons a {
                 padding: 10px 15px;
             }
+
+            .features-container {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .character-image {
+                width: 200px;
+            }
         }
     </style>
 </head>
@@ -135,27 +156,30 @@
         </div>
     </div>
 
-    <div class="features-section">
-        <h2>Features</h2>
-        <p class="features">
-            ⚔️ Immersive medieval experience <br>
-            🎮 Gaming community integration <br>
-            📜 Exclusive early access content <br>
-            🔥 Interactive & engaging platform <br>
-        </p>
+    <div class="features-container">
+        <img src="Assets/character.png" alt="Medieval Character" class="character-image">
+        <div>
+            <h2>Features</h2>
+            <p class="features">
+                 Immersive medieval experience <br>
+                 Gaming community integration <br>
+                 Exclusive early access content <br>
+                 Interactive & engaging platform <br>
+            </p>
+        </div>
     </div>
 
     <div class="gallery-container">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="Assets/image1.jpg" alt="Game Screenshot 1">
-     
-            <img src="Assets/image2.jpg" alt="Game Screenshot 2">
-            <img src="Assets/image3.jpg" alt="Game Screenshot 3">
-            <img src="Assets/image4.jpg" alt="Game Screenshot 4">
+            <img src="Assets/sowardsman.jpg" alt="Game Screenshot 1">
+            <img src="Assets/loading screen final.jpg" alt="Game Screenshot 2">
+            <img src="Assets/darkcstle.jpg" alt="Game Screenshot 3">
+            <img src="Assets/jungle.jpg" alt="Game Screenshot 4">
         </div>
     </div>
 
 </body>
 </html>
+
 
