--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Tamas Yami</title>
     <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
     <style>
         * {
@@ -18,96 +18,68 @@
             background-color: #121212;
             color: white;
             text-align: center;
+            background-image: url('tile1.jpg');
         }
 
         .header {
-            position: relative;
-            width: 100%;
-            height: 100vh; 
-            background: url('Assets/background copy.jpg') no-repeat center center/cover;
+            height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
+            background: url('background copy.jpg') no-repeat center center/cover;
         }
 
         .medieval-text {
-            position: absolute;
-            top: 35%;
-            font-size: 3rem;
+            font-size: 6rem;
             color: white;
             text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
             background: rgba(0, 0, 0, 0.5);
-            padding: 10px 20px;
+            padding: 20px 40px;
             border-radius: 10px;
         }
 
-        .buttons {
-            position: absolute;
-            bottom: 5vh;
-            right: 5vw;
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-
-        .buttons a {
-            text-decoration: none;
-            padding: 12px 18px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 8px;
+        .countdown {
+            font-size: 3rem;
+            margin-top: 20px;
+            color: #020227;
             font-weight: bold;
-            font-size: 1rem;
-            transition: 0.3s ease-in-out;
         }
 
-        .buttons a:hover {
-            background-color: #8284ff;
-            transform: scale(1.1);
-        }
-
-        .features-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 40px;
-            padding: 50px 20px;
-            text-align: left;
-            max-width: 1000px;
+        .features-container, .gameplay-container, .community-container {
+            padding: 50px;
+            text-align: center;
+            max-width: 1200px;
             margin: auto;
         }
 
-        .features {
-            max-width: 500px;
-            font-size: 1.2rem;
-            line-height: 1.6;
+        .features-container h2, .gallery h2, .gameplay-container h2, .community-container h2 {
+            font-size: 3rem;
+            margin-bottom: 20px;
         }
 
-        .character-image {
-            width: 250px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+        .features, .gameplay, .community {
+            font-size: 2rem;
+            line-height: 2;
+            max-width: 800px;
+            margin: auto;
         }
 
         .gallery-container {
-            width: 100%;
-            overflow-x: auto;
-            white-space: nowrap;
-            padding: 20px 0;
-            background: #1a1a1a;
+            padding: 50px 0;
         }
 
         .gallery {
-            display: inline-flex;
-            gap: 15px;
-            padding: 10px;
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 20px;
         }
 
         .gallery img {
-            width: 300px;
-            height: 200px;
+            width: 350px;
+            height: 250px;
             border-radius: 10px;
             object-fit: cover;
             transition: 0.3s;
@@ -117,69 +89,139 @@
             transform: scale(1.1);
         }
 
-        @media (max-width: 768px) {
+        .fotter {
+            padding: 50px;
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .buttons a {
+            text-decoration: none;
+            padding: 16px 24px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 8px;
+            font-size: 1.5rem;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .buttons a:hover {
+            background-color: #8284ff;
+            transform: scale(1.1);
+        }
+
+        .contact {
+            font-size: 1.2rem;
+            margin-top: 30px;
+        }
+
+        @media (max-width: 1080px) {
             .medieval-text {
-                font-size: 2rem;
+                font-size: 4rem;
+                padding: 15px 30px;
             }
 
-            .buttons {
-                bottom: 3vh;
-                right: 3vw;
-                flex-direction: column;
-                align-items: flex-end;
+            .features-container h2, .gallery h2, .gameplay-container h2, .community-container h2 {
+                font-size: 2.5rem;
             }
 
-            .buttons a {
-                padding: 10px 15px;
-            }
-
-            .features-container {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .character-image {
-                width: 200px;
+            .features, .gameplay, .community {
+                font-size: 1.8rem;
             }
         }
     </style>
 </head>
 <body>
-
     <div class="header">
         <div class="medieval-text">TAMAS YAMI</div>
-        <div class="buttons">
-            <a href="https://youtube.com" target="_blank">YouTube</a>
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://store.steampowered.com" target="_blank">Steam</a>
-            <a href="pre-register.html">Pre-Register</a>
-        </div>
+        <div class="countdown" id="countdown"></div>
     </div>
 
     <div class="features-container">
-        <img src="Assets/character.png" alt="Medieval Character" class="character-image">
-        <div>
-            <h2>Features</h2>
-            <p class="features">
-                 Immersive medieval experience <br>
-                 Gaming community integration <br>
-                 Exclusive early access content <br>
-                 Interactive & engaging platform <br>
-            </p>
-        </div>
+        <h2>DEV TALKS</h2>
+        <p class="features">
+            <b><i>Thinking Behind the Game</i></b><br><br>
+            We are huge fans of Dark Souls and its art style. Initially, we planned a shooter, but later shifted to a multiplayer Dark Souls-inspired PvP game.
+            <br><br>
+            <b><i>Concept</i></b><br>
+            The game will be PvP with different modes like 1v1, 2v2, and more coming soon. It will be a platformer in the Dark Souls theme.
+            <br><br>
+            <b><i>Launch Date</i></b><br>
+            The game is scheduled for release on <b>March 31, 2025</b>. Future updates will come, but no DLCs. However, a Dark Souls Campaign game is planned!
+        </p>
+    </div>
+
+    <div class="gameplay-container">
+        <h2>Gameplay Features</h2>
+        <p class="gameplay">
+            - Intense melee combat with swords, axes, and magic.<br>
+            - Unique character classes with customizable abilities.<br>
+            - Dark, immersive medieval environments.<br>
+            - Ranked matchmaking and casual PvP modes.<br>
+            - Cross-platform play support.
+        </p>
     </div>
 
     <div class="gallery-container">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="Assets/sowardsman.jpg" alt="Game Screenshot 1">
-            <img src="Assets/loading screen final.jpg" alt="Game Screenshot 2">
-            <img src="Assets/darkcstle.jpg" alt="Game Screenshot 3">
-            <img src="Assets/jungle.jpg" alt="Game Screenshot 4">
+            <img src="sowardsman.jpg" alt="Game Screenshot 1">
+            <img src="loading screen final.jpg" alt="Game Screenshot 2">
+            <img src="darkcstle.jpg" alt="Game Screenshot 3">
+            <img src="jungle.jpg" alt="Game Screenshot 4">
         </div>
     </div>
 
+    <div class="community-container">
+        <h2>Join the Community</h2>
+        <p class="community">
+            Stay updated, discuss strategies, and be part of the development process!<br>
+            Join us on <b><a href="https://discord.com" target="_blank" style="color:#8284ff;">Discord</a></b> and our <b><a href="#" style="color:#8284ff;">offcial forum</a></b>.
+        </p>
+    </div>
+
+    <div class="fotter">
+        <div class="buttons">
+            <a href="https://youtube.com" target="_blank">YouTube</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <a href="https://store.steampowered.com" target="_blank">Steam</a>
+            <a href="pre-register.html">Pre-Register</a>
+            <a href="#">Support us</a>
+            <a href="dev.html">Team</a>
+        </div>
+        <p class="contact">Contact us at: praveen.kumarj2x@gmail.com</p>
+        <p>&copy; 2025 Tamas Yami. All Rights Reserved.</p>
+    </div>
+
+    <script>
+        function updateCountdown() {
+            const countdownElement = document.getElementById("countdown");
+            const targetDate = new Date("March 31, 2025 00:00:00").getTime();
+            const currentDate = new Date().getTime();
+            const timeLeft = targetDate - currentDate;
+
+            const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+            countdownElement.innerHTML = `${days}d ${hours}h ${minutes}m ${seconds}s`;
+
+            if (timeLeft < 0) {
+                clearInterval(interval);
+                countdownElement.innerHTML = "The game has launched!";
+            }
+        }
+
+        const interval = setInterval(updateCountdown, 1000);
+        updateCountdown();
+    </script>
 </body>
 </html>
-
-
