--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: #121212;
             color: white;
             text-align: center;
-            background-image: url('tile1.jpg');
+            background-image: url('Assets/tile1.jpg');
         }
 
         .header {
@@ -27,7 +27,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url('background copy.jpg') no-repeat center center/cover;
+            background: url('Assets/background copy.jpg') no-repeat center center/cover;
         }
 
         .medieval-text {
@@ -172,10 +172,10 @@
     <div class="gallery-container">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="sowardsman.jpg" alt="Game Screenshot 1">
-            <img src="loading screen final.jpg" alt="Game Screenshot 2">
-            <img src="darkcstle.jpg" alt="Game Screenshot 3">
-            <img src="jungle.jpg" alt="Game Screenshot 4">
+            <img src="Assets/sowardsman.jpg" alt="Game Screenshot 1">
+            <img src="Assets/loading screen final.jpg" alt="Game Screenshot 2">
+            <img src="Assets/darkcstle.jpg" alt="Game Screenshot 3">
+            <img src="Assets/jungle.jpg" alt="Game Screenshot 4">
         </div>
     </div>
 
