--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <h2>Join the Community</h2>
         <p class="community">
             Stay updated, discuss strategies, and be part of the development process!<br>
-            Join us on <b><a href="https://praveenkushinpi.itch.io/tamsyami" target="_blank" style="color:#8284ff;">Itich download link</a></b> and our <b><a href="https://forms.fillout.com/t/9EkfBtriZkus" style="color:#8284ff;">offcial forum </a></b>.
+            Join us on <b><a href="https://praveenkushinpi.itch.io/tamsyami" target="_blank" style="color: #FFC0CB;">Itich download link</a></b> and our <b><a href="https://forms.fillout.com/t/9EkfBtriZkus" style="color: #FFC0CB;">offcial forum </a></b>.
         </p>
     </div>
 
